# bamul-cattle-insurance

./: .env.example  .gitignore  .gitleaks.toml  README.md  docker-compose.yml
.github/workflows/: ai-service-ci.yml  app-api-ci.yml  flutter-ci.yml  infrastructure-ci.yml
infrastructure/: cdk.json  package-lock.json  package.json
infrastructure/lib/: compute-stack.ts  database-stack.ts  irdai-sla-stack.ts  monitoring-stack.ts  networking-stack.ts  storage-stack.ts
mobile/: pubspec.yaml
mobile/android/app/: README.md
mobile/lib/: main_staging.dart
mobile/lib/app/: app.dart
mobile/lib/core/errors/: bamul_errors.dart
mobile/lib/core/l10n/: app_en.arb  app_kn.arb
mobile/lib/core/router/: app_routes.dart
services/bamul-ai-service/: .env.example  Dockerfile.cpu  main.py  pyproject.toml
services/bamul-ai-service/app/: main.py
services/bamul-ai-service/app/api/: embed.py  health.py  match.py
services/bamul-ai-service/app/core/: config.py
services/bamul-ai-service/tests/: conftest.py  test_health.py
services/bamul-app-api/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml
services/bamul-app-api/alembic/: env.py
services/bamul-app-api/alembic/versions/: a1b2c3d4e5f6_baseline_schema_and_roles.py
services/bamul-app-api/app/: main.py
services/bamul-app-api/app/core/: config.py  database.py  exceptions.py  security.py
services/bamul-app-api/app/models/: __init__.py  biometric.py  compliance.py  identity.py  insurance.py  premium.py
services/bamul-app-api/tests/: conftest.py  test_config.py  test_exceptions.py  test_health.py
(+2 files in other folders)
